# kosmonaut

./: .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  notes.md  scratch.txt
.github/scripts/: cleanup-xvfb.sh
.github/workflows/: lint-and-test.yaml
ci/: cargo-check.yml  cargo-clippy.yml  cargo-cross.yml  install-cross-rust.yml  install-gtk.yml  rustfmt.yml  test.yml
components/cli/: Cargo.toml
components/cli/src/: commands.rs  lib.rs  matches.rs
components/display_list/: Cargo.toml
components/display_list/src/: char.rs  lib.rs
components/dom/: Cargo.toml
components/dom/src/: attributes.rs  cell_extras.rs  iter.rs  lib.rs  node_data_ref.rs  parser.rs  selectors_integration.rs  serializer.rs  styling.rs  tests.rs  tree.rs
components/gfx/: Cargo.toml
components/gfx/shaders/: text.vert  triangle.vert
components/gfx/src/: char.rs  font.rs  headed.rs  headless.rs  lib.rs  ndc.rs
components/gfx/src/paint/: mod.rs  rect.rs  text.rs
components/gl/: Cargo.toml  build.rs
components/gl/src/: bindings.rs  info_log.rs  pixels.rs  program.rs  shader.rs  texture.rs  util.rs  viewport.rs
components/gl/src/buffer/: framebuffer.rs  mod.rs  renderbuffer.rs  vbo.rs
components/kosmonaut_selectors/: Cargo.toml
components/kosmonaut_selectors/src/: lib.rs
components/layout/: Cargo.toml
components/layout/src/: behavior.rs  box_tree.rs  containing_block.rs  dimensions.rs  formatting_context.rs  layout_box.rs  lib.rs
components/layout/src/flow/: block.rs  inline.rs  mod.rs
components/primitives/: Cargo.toml
components/primitives/src/: lib.rs  rect.rs  sides.rs  units.rs
components/style/: Cargo.toml
components/style/src/: lib.rs  macros.rs  select.rs  stylesheet.rs  test_utils.rs
components/style/src/properties/: id.rs  mod.rs
components/style/src/values/: mod.rs
components/style/src/values/computed/: background.rs  border.rs  color.rs  direction.rs  display.rs  font.rs  height.rs  length.rs  margin.rs  mod.rs  padding.rs  percentage.rs  width.rs
components/style/src/values/specified/: background.rs  border.rs  color.rs  font.rs  height.rs  length.rs  margin.rs  mod.rs  padding.rs  width.rs
components/style/src/values/used/: length.rs  mod.rs
crates/gl/: Cargo.toml
crates/gl/src/: bindings.rs  error.rs  lib.rs  pixels.rs  program.rs  texture.rs  util.rs  vao.rs  vbo.rs  viewport.rs
crates/gl/src/buffer/: framebuffer.rs  mod.rs  renderbuffer.rs  vbo.rs
docker/: Dockerfile-arch  Dockerfile-ubuntu
kosmonaut/: kosmonaut.ngfx-proj
shader_src/: triangle.frag  triangle.vert
src/: cli.rs  common.rs  frame.rs  layout.rs  lib.rs  main.rs
src/dom/: cell_extras.rs  iter.rs  mod.rs  node_data_ref.rs  parser.rs  serializer.rs  tests.rs  tree.rs
src/gfx/: char.rs  display.rs  font.rs  headed.rs  headless.rs  mod.rs  ndc.rs  program.rs  rect.rs  shader.rs
src/gfx/kgl/: info_log.rs  mod.rs
src/gfx/paint/: mod.rs  rect.rs  text.rs
src/layout/: behavior.rs  box_tree.rs  containing_block.rs  dimensions.rs  flow.rs  formatting_context.rs  layout_box.rs  mod.rs  rect.rs
src/layout/flow/: block.rs  inline.rs  mod.rs
src/layout/values/: mod.rs
src/paint/: mod.rs
src/style/: dom_integration.rs  macros.rs  mod.rs  select.rs  stylesheet.rs  test_utils.rs
src/style/properties/: id.rs  mod.rs
src/style/values/: display.rs  font.rs  length.rs  mod.rs  percentage.rs
tests/: layout.rs  lib.rs
tests/common/: mod.rs
tests/layout/: directional.rs  mod.rs
tests/layout/block/: mod.rs
tests/layout/directional/: mod.rs
tests/layout/display/: mod.rs
tests/layout/snapshots/: lib__layout__tests__rainbow_divs_baseline.snap  lib__layout__tests__rainbow_divs_baseline_two_scale_factor.snap
tests/snapshots/: layout__tests__rainbow_divs_baseline.snap  rainbow-divs.html.snap  rainbow-divs.html@scaled-2.snap
tests/snapshots/block/: block-layout-subtree-simple.dumplayout.html.snap  block-layout-subtrees.dumplayout.html.snap
tests/snapshots/directional/: ltr-sideways-lr-block-boxes.dumplayout.html.snap  ltr-sideways-rl-block-boxes.dumplayout.html.snap  ltr-vertical-lr-block-boxes-bottom-right-mbp-applied-physically.html@verbose.snap  ltr-vertical-lr-block-boxes-top-left-mbp-applied-physically.html@verbose.snap  ltr-vertical-lr-block-boxes.dumplayout.html.snap  ltr-vertical-rl-block-boxes-simple-subtrees.dumplayout.html.snap  ltr-vertical-rl-block-boxes-simple.dumplayout.html.snap  rtl-horizontal-tb-block-boxes.dumplayout.html.snap  rtl-sideways-lr-block-boxes.dumplayout.html.snap  rtl-sideways-rl-block-boxes.dumplayout.html.snap  rtl-vertical-lr-block-boxes.dumplayout.html.snap
tests/snapshots/display/: body-display-none.dumplayout.html.snap  html-display-none.dumplayout.html.snap  subtree-display-none.dumplayout.html.snap
tests/style/: mod.rs  shorthands.rs
tests/util/: mod.rs
tests/websrc/: basic-boxes.css  basic-boxes.html  basic-inline-layout.css  basic-inline-layout.html  rainbow-divs.html
tests/websrc/block/: block-layout-subtree-simple.css  block-layout-subtree-simple.dumplayout.html  block-layout-subtree-simple.html  block-layout-subtrees.dumplayout.html  block-layout-subtrees.html
tests/websrc/directional/: ltr-sideways-lr-block-boxes.dumplayout.html  ltr-sideways-rl-block-boxes.html  ltr-vertical-lr-block-boxes-bottom-right-mbp-applied-physically.css  ltr-vertical-lr-block-boxes-bottom-right-mbp-applied-physically.html  ltr-vertical-lr-block-boxes-top-left-mbp-applied-physically.css  ltr-vertical-lr-block-boxes-top-left-mbp-applied-physically.html  ltr-vertical-lr-block-boxes.css  ltr-vertical-lr-block-boxes.html  ltr-vertical-rl-block-boxes-simple-subtrees.dumplayout.html  ltr-vertical-rl-block-boxes-simple.dumplayout.html  ltr-vertical-rl-block-boxes.html  rtl-horizontal-tb-block-boxes.css  rtl-horizontal-tb-block-boxes.dumplayout.html  rtl-horizontal-tb-block-boxes.html  (+7 more)
web/: author.css  basic-vertical-rl.css  basic-vertical-rl.html  basic.html  browser.css  margin-auto-manual-test.html  rainbow-divs-incl-css.html  rainbow-divs-test.html  rainbow-divs.css  rainbow-divs.html  user.css  useragent.css
(+69 files in other folders)
