[package]
name = "kosmonaut"
version = "0.1.0"
authors = ["Tyler Wilcock <twilco.o@protonmail.com>"]
edition = "2018"

[dependencies]
accountable-refcell = "0.2.1"
app_units = "0.7.1"
cssparser = "0.27"
clap = "2.33.0"
derive_builder = "0.10.0"
enum_dispatch = "0.3.5"
font-kit = { git = "https://github.com/twilco/font-kit" }
gl = { path = "crates/gl" }
glutin = "0.26"
html5ever = "0.25.1"
image = "0.23"
isahc = "1.3.0"
matches = "0.1.8"
pathfinder_geometry = "0.5.1"
rand = "0.8"
selectors = "0.22.0"
smallbitvec = "2.5.0"
strum = "0.20"
strum_macros = "0.20"
tempdir = "0.3.7"
url = "2.2"

[dev-dependencies]
insta = "1.7.1"
# This is a slightly modified fork of https://github.com/commure/datatest/pull/30 (at the time this comment was written).
datatest = { git = "https://github.com/twilco/datatest", branch = "downgrade-version-check" }
datatest-derive = { git = "https://github.com/twilco/datatest", branch = "downgrade-version-check" }

[features]
gl_debug = ["gl/debug"]
