[package]
name = "kosmonaut"
version = "0.1.0"
authors = ["Tyler Wilcock <twilco.o@protonmail.com>"]
edition = "2018"

[dependencies]
cssparser = "0.27"
cli = { path = "components/cli" }
display_list = { path = "components/display_list" }
dom = { path = "components/dom" }
gfx = { path = "components/gfx" }
gl = { path = "components/gl" }
glutin = "0.26"
html5ever = "0.25.1"
image = "0.23"
isahc = "1.3.0"
kosmonaut_selectors = { path = "components/kosmonaut_selectors" }
layout = { path = "components/layout" }
primitives = { path = "components/primitives" }
style = { path = "components/style" }
url = "2.2"

[dev-dependencies]
insta = "1.7.1"
# This is a slightly modified fork of https://github.com/commure/datatest/pull/30 (at the time this comment was written).
datatest = { git = "https://github.com/twilco/datatest", branch = "downgrade-version-check" }
datatest-derive = { git = "https://github.com/twilco/datatest", branch = "downgrade-version-check" }

[features]
gl_debug = ["gl/debug"]

[workspace]
members = [
    "components/cli",
    "components/display_list",
    "components/dom",
    "components/gfx",
    "components/gl",
    "components/kosmonaut_selectors",
    "components/layout",
    "components/primitives",
    "components/style"
]
