[package]
name = "gfx"
version = "0.1.0"
description = "Kosmonaut's graphics module."
authors = ["Tyler Wilcock <twilco.o@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
app_units = "0.7.1"
accountable-refcell = "0.2.1"
cssparser = "0.27"
display_list = { path = "../display_list" }
font-kit = { git = "https://github.com/twilco/font-kit" }
gl = { path = "../gl" }
glutin = "0.26.0"
image = "0.23"
layout = { path = "../layout" }
pathfinder_geometry = "0.5.1"
primitives = { path = "../primitives" }
